nu spiller inte boxar över, däremot är de för korta, fixar sen

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  max-width: 1700px;
+  max-width: 1500px;
   margin: 0;
   padding: 0;
 }
